deleted the entire react frontend implementation

--- a/package.json
+++ b/package.json
@@ -9,16 +9,14 @@
     "start": "next start",
     "lint": "next lint",
     "setup": "node setup.js",
-    "setup:mobile": "cd MobileApp && npm install",
     "setup:blockchain": "cd MobilePass && npm install",
     "dev:web": "next dev --turbopack",
-    "dev:mobile": "cd MobileApp && npm start",
     "dev:blockchain": "cd MobilePass && npx hardhat node",
-    "dev:all": "concurrently \"npm run dev:web\" \"npm run dev:mobile\" \"npm run dev:blockchain\"",
-    "build:all": "npm run build && cd MobileApp && npm run android --release && cd ../MobilePass && npm run compile",
-    "test:all": "npm run lint && cd MobileApp && npm test && cd ../MobilePass && npm test",
-    "clean": "rimraf node_modules package-lock.json && cd MobileApp && rimraf node_modules package-lock.json && cd ../MobilePass && rimraf node_modules package-lock.json cache artifacts",
-    "install:all": "npm install && npm run setup:mobile && npm run setup:blockchain",
+    "dev:all": "concurrently \"npm run dev:web\" \"npm run dev:blockchain\"",
+    "build:all": "npm run build && cd MobilePass && npm run compile",
+    "test:all": "npm run lint && cd MobilePass && npm test",
+    "clean": "rimraf node_modules package-lock.json && cd MobilePass && rimraf node_modules package-lock.json cache artifacts",
+    "install:all": "npm install && npm run setup:blockchain",
     "deploy:blockchain": "cd MobilePass && npm run deploy",
     "compile:contracts": "cd MobilePass && npm run compile"
   },
