--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "compile:contracts": "cd MobilePass && npm run compile"
   },
   "dependencies": {
+    "ethers": "^6.14.1",
     "next": "15.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
